# getbuf

./: .gitignore  README.md  pyproject.toml
src/getbuf/: __init__.py  cli.py  config.py  core.py  fs.py  logging.py  main.py  models.py  parsing.py  utils.py  version.py
src/tests/: test_cli.py  test_core.py  test_fs.py  test_logging.py  test_models.py  test_parsing.py  test_version.py
src/tests/fixtures/: buf.yaml
