[project]
name = "getbuf"
version = "0.1.0"
description = "Run Buf locally to generate BetterProto v2 async stubs with rich results"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "grpcio-tools>=1.74.0",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    "typer>=0.16.1",
    "uvicorn>=0.35.0",
    "betterproto2",
    "betterproto2_compiler",
    "pytest-html>=4.1.1",
    "pyyaml>=6.0.2",
    "typing-extensions>=4.15.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv.sources]
betterproto2 = { git = "https://github.com/Bullish-Design/python-betterproto2.git", subdirectory = "betterproto2"  }
betterproto2_compiler = { git = "https://github.com/Bullish-Design/python-betterproto2.git", subdirectory = "betterproto2_compiler"}

[project.scripts]
getbuf = "getbuf.cli:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/getbuf"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
addopts = "-v --cov=getbuf --cov-report=term-missing"
python_files = "test_*.py"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
